fix(HAP-254): return mobile scrollbars

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -23,9 +23,4 @@ body {
   }
 }
 
-@media screen and (max-width: 1023px) {
-  ::-webkit-scrollbar{
-    display: none;
-  }
-}
 
